--- a/ui/src/css/components/nav.css
+++ b/ui/src/css/components/nav.css
@@ -36,7 +36,11 @@
 }
 
 .nav__list--dropdown {
-    background-color: var(--webui-color-neutral-100);
+    /* background-color: var(--webui-color-neutral-100); */
+    background-color: light-dark(
+        var(--webui-color-neutral-100),
+        var(--webui-color-neutral-900)
+    );
     border: var(--webui-border-width-s) solid;
     flex-direction: column;
     inset-block-start: 100%;
@@ -88,7 +92,10 @@
     /* Using <webui-disclosure> custom element. */
     webui-disclosure:defined {
         .nav__list {
-            background-color: var(--webui-color-neutral-100);
+            background-color: light-dark(
+                var(--webui-color-neutral-100),
+                var(--webui-color-neutral-900)
+            );
             border: var(--webui-border-width-s) solid;
             inset-block-start: 100%;
             padding: var(--webui-gutter-m);
